--- a/Index.html
+++ b/Index.html
@@ -202,7 +202,7 @@
             <div>
                 <h1 id="main-title" class="text-3xl md:text-5xl font-bold text-white flex items-center">
                     <img src="https://i.postimg.cc/wBM98pf0/logo11-2-184952.png" width="50" style="margin-right: 5px;">
-<span>ðŸ…°ï¸ŽðŸ…µï¸Ž1ðŸ…²ï¸ŽðŸ…¸ï¸ŽðŸ…¾ï¸ŽðŸ…µï¸ŽðŸ…»ï¸ŽðŸ…¸ï¸ŽðŸ†‡ï¸Ž</span>
+<span>🅰︎🅵︎1🅲︎🅸︎🅾︎🅵︎🅻︎🅸︎🆇︎</span>
                 </h1>
                 <h2 id="view-subtitle" class="text-lg text-gray-400 mt-1"></h2>
             </div>
